# SCALEX

./: .gitignore  .sourcery.yaml  Untitled.ipynb  debug.py  mypy.ini  pyproject.toml  ruff.toml
src/scalex/: __init__.py  __main__.py  analysis.py  data.py  function.py  logger.py  logging.py  metrics.py  plot.py  specifity.py
src/scalex/atac/: bedtools.py  fragments.py  read_modisco.py
src/scalex/atac/snapatac2/: _basic.py  _clustering.py  _diff.py  _embedding.py  _knn.py  _misc.py  _motif.py  _utils.py
src/scalex/linkage/: linkage.py  utils.py
src/scalex/linkage/motif/: logo_utils.py  motif_compendium.py
src/scalex/net/: layer.py  loss.py  utils.py  vae.py
src/scalex/pl/: GWASVariantsTrack.py  ShapTrack.py  __init__.py  _base.py  _network.py  _pygenometrack.py  analysis.py  plot.py  trackplot.py
src/scalex/pp/: annotation.py  e2g.py
src/tests/: conftest.py  test_scalex.py
third_parties/: BBKNN.py  DESC.py  Raw.py  Scanorama.py  scVI.py
