[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Lei Xiong", email = "jsxlei@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.4",
    "pandas>=2.1.1",
    "scipy>=1.11.3",
    "scikit-learn>=1.3.1",
    "torch>=2.2",
    "scanpy>=1.9",
    "tqdm>=4.66.1",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "leidenalg>=0.10.2",
    "muon>=0.1.6",
    "loguru<1.0.0,>=0.7.2",
    "typer<1.0.0,>=0.9.0",
    "rich<14.0.0,>=13.7.1",
    "tbb<2022.0.0,>=2021.11.0",
]
name = "scalex"
version = "1.3.1"
description = "Online single-cell data integration through projecting heterogeneous datasets into a common cell-embedding space"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
homepage = "https://github.com/jsxlei/scalex"
repository = "https://github.com/jsxlei/scalex"
documentation = "https://scalex.readthedocs.io/en/latest/index.html"

[project.scripts]
scalex = "scalex.__main__:app"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ruff<1.0.0,>=0.1.14",
    "mypy<2.0.0,>=1.8.0",
    "sourcery<2.0.0,>=1.15.0",
    "pandas-stubs<3.0.0.0,>=2.2.0.240218",
]

[tool.pdm.build]
includes = []

[[tool.pdm.source]]
name = "pytorch_nightly"
url = "https://download.pytorch.org/whl/nightly/cpu"
verify_ssl = true
include_packages = ["torch"]