[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Lei Xiong", email = "jsxlei@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.0",
    "pandas>=2.1.0",
    "scipy==1.15.0",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0.dev20250121",
    "scanpy==1.10.4",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "leidenalg>=0.10.2",
    "typer>=0.15.1",
    "rich>=13.9.4",
    "loguru>=0.7.3",
    "muon>=0.1.7"
]
name = "scalex"
version = "1.4.0"
description = "Online single-cell data integration through projecting heterogeneous datasets into a common cell-embedding space"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
homepage = "https://github.com/jsxlei/scalex"
repository = "https://github.com/jsxlei/scalex"
documentation = "https://scalex.readthedocs.io/en/latest/index.html"

[project.scripts]
scalex = "scalex.__main__:app"

[tool.pdm]
[tool.pdm.build]
includes = []

[[tool.pdm.source]]
name = "pytorch_nightly"
url = "https://download.pytorch.org/whl/nightly/cpu"
verify_ssl = true
include_packages = ["torch"]
[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.9.2",
    "mypy<2.0.0,>=1.8.0",
    "sourcery<2.0.0,>=1.15.0",
    "pandas-stubs<3.0.0.0,>=2.2.0.240218",
    "pytest>=8.3.4",
]
