[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Lei Xiong", email = "jsxlei@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "leidenalg>=0.10.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "muon>=0.1.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyranges>=0.1.4",
    "rich>=14.2.0",
    "scanpy>=1.11.4",
    "scikit-learn>=1.7.2",
    "scipy==1.15.0",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "typer>=0.19.2",
]
name = "scalex"
version = "1.4.0"
description = "Online single-cell data integration through projecting heterogeneous datasets into a common cell-embedding space"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]


[project.urls]
homepage = "https://github.com/jsxlei/scalex"
repository = "https://github.com/jsxlei/scalex"
documentation = "https://scalex.readthedocs.io/en/latest/index.html"

[project.scripts]
scalex = "scalex.__main__:app"

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
    "ruff>=0.14.1",
    "ty>=0.0.1a23",
]
test = [
    "pytest>=8.4.2",
    "coverage"
]


[tool.coverage.run]
source = ["scalex"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]
